Update: Documentation, fix bad <p> tags, and make FSS an acronym.
Update the FLL program documentation.

--- a/documentation/byte_dump.html
+++ b/documentation/byte_dump.html
@@ -140,12 +140,17 @@
                       <td class="column">Do not print using color.</td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><code class="code">+q</code></td>
+                      <td class="column"><code class="code">+Q</code></td>
                       <td class="column"><code class="code">++quiet</code></td>
                       <td class="column">Decrease verbosity, silencing most output.</td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><code class="code">+n</code></td>
+                      <td class="column"><code class="code">+E</code></td>
+                      <td class="column"><code class="code">++error</code></td>
+                      <td class="column">Decrease verbosity, using only error output.</td>
+                    </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code">+N</code></td>
                       <td class="column"><code class="code">++normal</code></td>
                       <td class="column">Set verbosity to normal.</td>
                     </tr>
@@ -168,10 +173,10 @@
                 </table>
               </div>
               <p class="p">
-                The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p class="p">
-                The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
+                The <code class="code">+N/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
           </section>
@@ -258,17 +263,39 @@
                       <td class="column"><code class="code">--width</code></td>
                       <td class="column">Set number of columns of Bytes to display.</td>
                     </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code"></code></td>
+                      <td class="column"><code class="code">--normal</code></td>
+                      <td class="column">Display <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> symbols for <abbr title="American Standard Code for Information Interchange">ASCII</abbr> control codes.</td>
+                    </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code"></code></td>
+                      <td class="column"><code class="code">--simple</code></td>
+                      <td class="column">Display spaces for <abbr title="American Standard Code for Information Interchange">ASCII</abbr> control codes.</td>
+                    </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code"></code></td>
+                      <td class="column"><code class="code">--classic</code></td>
+                      <td class="column">Display periods for <abbr title="American Standard Code for Information Interchange">ASCII</abbr> control codes.</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
               <p class="p">
-                The output is broken up into two or three parts.
+                When using the <code class="code">--text</code> option, some <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters may be replaced by your instance and cause display alignment issues.
               </p>
-              <ol>
-                <li>The first part, on the left mode side of the output, contains 16 upper case hexidecimal digits representing the maximum length supported by the <strong>byte_dump</strong> program.</li>
-                <li>The second part displays the individual bytes in a numeric format or similar (depending on parameters). In the second part, the hexidecimal digits are never swapped based on endianness.</li>
-                <li>The third part, which only appears when using the <code class="code">-t/--text<code class="code"> parameter, displays the character each digit or set of digits may represent. Any characters considered unsafe or improper are substituted with a replacement character.</li>
-              </ol>
+              <p class="p">
+                Special <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters and non-spacing <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters may be replaced with a space (or a placeholder when the <code class="code">--placeholder</code> option is used).
+              </p>
+              <p class="p">
+                <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> "Combining" characters might have a space appended to allow a proper display but this may cause copy and paste issues.
+              </p>
+              <p class="p">
+                When --last is used, any <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> sequences will still be printed in full should any part is found within the requested range.
+              </p>
+              <p class="p">
+                When using the <code class="code">--unicode</code> option, invalid Unicode will fallback to being displayed using one of the other modes.
+              </p>
             </div>
           </section>
         </main>
