--- a/projects.html
+++ b/projects.html
@@ -406,7 +406,7 @@
               <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-000E (Payload).<br>
                 This performs read operations related to the FSS-000E (Payload) standard.<br>
-              <p class="p">
+              </p>
               <p class="p">
                 The FSS-000E (Payload) is focused on network communication and is intended to be used inside a network packet.<br>
                 This program can be used to manually read a network packet or data from the network.
@@ -422,7 +422,7 @@
               <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-000E (Payload).<br>
                 This performs write operations related to the FSS-000E (Payload) standard.<br>
-              <p class="p">
+              </p>
               <p class="p">
                 The FSS-000E (Payload) is focused on network communication and is intended to be used inside a network packet.<br>
                 This program can be used to manually write the payload portion of a network packet.
@@ -467,9 +467,9 @@
             </header>
             <div class="article-content">
               <p class="p">
-                Similar to the FSS Read programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
+                Similar to the <abbr title="Featureless Settings Specifications">FSS</abbr> Read programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
                 This performs read operations related to the Unrestricted IKI standard (IKI-0000).<br>
-              <p class="p">
+              </p>
               <p class="p">
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
@@ -487,9 +487,9 @@
             </header>
             <div class="article-content">
               <p class="p">
-                Similar to the FSS Write programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
+                Similar to the <abbr title="Featureless Settings Specifications">FSS</abbr> Write programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
                 This performs write operations related to the Unrestricted IKI standard (IKI-0000).<br>
-              <p class="p">
+              </p>
               <p class="p">
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
