--- a/documentation/control.html
+++ b/documentation/control.html
@@ -137,12 +137,17 @@
                       <td class="column">Do not print using color.</td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><code class="code">+q</code></td>
+                      <td class="column"><code class="code">+Q</code></td>
                       <td class="column"><code class="code">++quiet</code></td>
                       <td class="column">Decrease verbosity, silencing most output.</td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><code class="code">+n</code></td>
+                      <td class="column"><code class="code">+E</code></td>
+                      <td class="column"><code class="code">++error</code></td>
+                      <td class="column">Decrease verbosity, using only error output.</td>
+                    </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code">+N</code></td>
                       <td class="column"><code class="code">++normal</code></td>
                       <td class="column">Set verbosity to normal.</td>
                     </tr>
@@ -165,10 +170,10 @@
                 </table>
               </div>
               <p class="p">
-                The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p class="p">
-                The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
+                The <code class="code">+N/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
           </section>
